Fixing experience image sizing on mobile

--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ canvas {
 
 .experience-img {
 	max-height: 100px;
-	width: fit-content;
 	margin-left: auto;
 	margin-right: auto;
 }
